# python-smart-pinyin

./: README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  unittest.yml
pinyin/: __init__.py  config.py
tests/: test_pinyin.py
