[project]
name = "smart_pinyin"
description = "Smart Chinese-to-Pinyin converter."

authors = [
  {name = "mapix"},
  {name = "Elephant Liu"},
]

license = "MIT"

classifiers = [
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
]

dependencies = [
    "jieba",
    "six",
]

readme = "README.md"

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/xospc/python-smart-pinyin"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
